自動ツイート画像生成先がなかった時エラーが発生していたので修正